--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,16 +14,20 @@ spring.devtools.restart.exclude=resources/**
 spring.main.allow-bean-definition-overriding=true
 
 #数据库相关配置
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://10.0.54.102:3306/common_mistakes
-spring.datasource.username=devops
-spring.datasource.password=devopsgogogo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/common_mistakes?connectTimeout=5000&characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=P@ssw0rd200100
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
 spring.datasource.initial-size=5
 spring.datasource.platform=mysql
 spring.datasource.maximum-pool-size=100
+
+#spring.datasource.hikari.maximum-pool-size=50
+#spring.datasource.hikari.register-mbeans=true
+#spring.datasource.hikari.connection-timeout=10000
 
 # jpa配置
 spring.jpa.show-sql=false
@@ -32,13 +36,18 @@ spring.jpa.open-in-view=false
 
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=admin
-management.endpoints.web.exposure.include=*
-spring.elasticsearch.cluster-name=es-docker-cluster
-spring.elasticsearch.rest.uris=127.0.0.1:9201,127.0.0.1:9202,127.0.0.1:9203
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=admin
+#spring.rabbitmq.password=admin
+#management.endpoints.web.exposure.include=*
+#spring.elasticsearch.cluster-name=es-docker-cluster
+#spring.elasticsearch.rest.uris=127.0.0.1:9201,127.0.0.1:9202,127.0.0.1:9203
 
 #session生命周期
 server.servlet.session.timeout=30m
+
+# 关闭对RabbitMQ的检查
+management.health.rabbit.enabled=false
+
+spring.devtools.restart.enabled=false
