--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ server.tomcat.uri-encoding=utf-8
 
 logging.level.ROOT=INFO
 
-server.tomcat.threads.max=2
+server.tomcat.threads.max=1
 spring.devtools.restart.exclude=resources/**
 spring.main.allow-bean-definition-overriding=true
 
@@ -17,7 +17,7 @@ spring.main.allow-bean-definition-overriding=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/common_mistakes?connectTimeout=5000&characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=P@ssw0rd200100
+spring.datasource.password=P@ssw0rd
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
 spring.datasource.min-idle=5
